--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -161,10 +161,10 @@
 							</div>
 						}
 
-						@if (DLCs.Count > 0)
+						@if (dlcs.Count > 0)
 						{
 							<div style="font-size: 16px; background-color: var(--fondoDlc); height: 40px;">
-								<a onclick="moverScroll('dlcs')" style="color: var(--colorTextoDlc); text-decoration: none; cursor: pointer; padding: 8px 10px; vertical-align: middle; display: table-cell;">@Idiomas.CogerCadena(idioma, "String34", "Game") (@DLCs.Count.ToString())</a>
+								<a onclick="moverScroll('dlcs')" style="color: var(--colorTextoDlc); text-decoration: none; cursor: pointer; padding: 8px 10px; vertical-align: middle; display: table-cell;">@Idiomas.CogerCadena(idioma, "String34", "Game") (@dlcs.Count.ToString())</a>
 							</div>
 						}
 					</div>
@@ -223,30 +223,6 @@
 									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 16 16"><path d="M6.813.034C-.65.635 1.329 8.518 1.218 11.158 1.119 12.555.655 14.262 0 16h2.018c.207-.737.36-1.465.425-2.159.122.085.252.167.39.245.227.133.42.31.626.498.48.438 1.025.933 2.09.996.071.004.143.006.213.006 1.077 0 1.813-.471 2.404-.85.284-.181.529-.338.76-.413.654-.205 1.226-.536 1.654-.957.067-.066.128-.134.187-.202.238.873.565 1.855.926 2.835H16c-1.034-1.597-2.1-3.162-2.079-5.159.044-3.948.45-11.409-7.109-10.806zm3.17 10.145a12.94 12.94 0 0 0-.852-.328 2.08 2.08 0 0 0 .213-.894c.018-.819-.395-1.483-.922-1.485-.526 0-.967.662-.985 1.48v.08a4.609 4.609 0 0 0-.956-.324l-.004-.093c-.03-1.491.884-2.725 2.043-2.756C9.68 5.827 10.642 7.01 10.672 8.5a3.192 3.192 0 0 1-.474 1.777 3.108 3.108 0 0 0-.215-.099zm-1.276.488c.253.087.539.185.921.35l.007.002c.357.147.78.415.76.859-.03.68-.92 1.32-1.743 1.578l-.005.002c-.342.11-.647.306-.97.513-.543.347-1.104.706-1.915.706-.054 0-.107 0-.16-.004-.744-.043-1.09-.36-1.53-.76-.232-.212-.472-.43-.781-.612l-.007-.004c-.667-.377-1.081-.845-1.108-1.253-.013-.203.077-.379.269-.522.416-.312.695-.516.88-.651.204-.15.266-.195.312-.238l.106-.103c.382-.372 1.021-.993 2.002-.993.6 0 1.264.23 1.972.686.333.217.623.317.99.444zM5.6 12.046c-.954-.07-1.721-.33-2.058-.559a.455.455 0 0 0-.51.753c.542.367 1.501.64 2.503.712.17.013.356.02.557.02.871 0 1.978-.083 3.162-.634a.455.455 0 0 0-.383-.824c-1.28.596-2.471.59-3.27.532zM4.25 8.97c-.072-.732-.462-1.285-.873-1.234-.41.05-.686.684-.614 1.415.03.32.123.604.25.82-.031.025-.12.09-.224.166l-.286.21c-.312-.408-.524-.993-.562-1.654-.074-1.29.542-2.373 1.377-2.422.834-.048 1.57.957 1.645 2.245.004.07.006.139.006.207A3.25 3.25 0 0 0 4.25 9a.614.614 0 0 0-.001-.029z" fill="var(--colorTexto)"></path></svg>
 								}
 							</div>
-						}
-						
-						@if (juego.Deck != JuegoDeck.Desconocido)
-						{
-							<button @onclick="(e => DeckEnseñar(e))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px;">
-								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 32px;">
-									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.84" fill-rule="evenodd" clip-rule="evenodd" d="M7.77715 4.30197C10.9241 4.30197 13.4752 6.85305 13.4752 9.99997C13.4752 13.1469 10.9241 15.698 7.77715 15.698V18.8889C12.6864 18.8889 16.666 14.9092 16.666 9.99997C16.666 5.09078 12.6864 1.11108 7.77715 1.11108V4.30197ZM7.77756 13.8889C9.92533 13.8889 11.6664 12.1477 11.6664 9.99997C11.6664 7.8522 9.92533 6.11108 7.77756 6.11108C5.62979 6.11108 3.88867 7.8522 3.88867 9.99997C3.88867 12.1477 5.62979 13.8889 7.77756 13.8889Z" fill="var(--colorTexto)"></path></svg>
-
-									@if (juego.Deck == JuegoDeck.Verificado)
-									{
-										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
-									}
-
-									@if (juego.Deck == JuegoDeck.Jugable)
-									{
-										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.61079 9.44444V15H11.3886V9.44444H8.61079ZM9.07372 8.05245C9.34781 8.23558 9.67004 8.33333 9.99967 8.33333C10.4417 8.33333 10.8656 8.15774 11.1782 7.84518C11.4907 7.53262 11.6663 7.10869 11.6663 6.66667C11.6663 6.33703 11.5686 6.0148 11.3855 5.74072C11.2023 5.46663 10.942 5.25301 10.6375 5.12687C10.3329 5.00072 9.99783 4.96771 9.67452 5.03202C9.35122 5.09633 9.05425 5.25507 8.82116 5.48815C8.58808 5.72124 8.42934 6.01821 8.36503 6.34152C8.30072 6.66482 8.33373 6.99993 8.45988 7.30447C8.58602 7.60902 8.79964 7.86931 9.07372 8.05245Z" fill="var(--deckJugable)"></path></svg>
-									}
-
-									@if (juego.Deck == JuegoDeck.NoSoportado)
-									{
-										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.193 15.606a7 7 0 0 1-9.799-9.799l9.8 9.8Zm1.414-1.414a7 7 0 0 0-9.799-9.799l9.8 9.8ZM19.001 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" fill="var(--colorTexto)"></path></svg>
-									}
-								</div>
-							</button>
 						}
 
 						@if (usuario != null)
@@ -525,41 +501,131 @@
 											}
 										</div>
 
-										<div style="display: flex; flex-direction: column; gap: 20px;">
+										<div style="display: flex; flex-direction: column; gap: 20px; flex: 1 0 auto;">
 											@if (HistoricoComprobar(drm.Id) == true)
 											{
-												<button @onclick="(e => HistoricoEnseñar(e, drm.Id))" class="boton-pequeño" style="width: 200px; text-align: center; font-size: 14px; padding: 10px 12px;">
+												<button @onclick="(e => HistoricoEnseñar(e, drm.Id))" class="boton-pequeño" style="width: auto; min-width: fit-content; text-align: center; font-size: 14px; padding: 12px 15px;">
 													@Herramientas.Idiomas.CogerCadena(idioma, "String64", "Game")
 												</button>
 											}
 
-											@if (drm.Id == JuegoDRM.Steam)
-											{
-												if (juego.IdSteam > 0)
-												{
-													<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://store.steampowered.com/app/" + juego.IdSteam.ToString(), "steam")" target="_blank" style="width: 200px; text-align: center;">
-														@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "Steam")
-													</a>
-												}											
-											}
+											@{
+												bool añadirDiv = false;
 
-											@if (drm.Id == JuegoDRM.GOG)
-											{
-												if (string.IsNullOrEmpty(juego.SlugGOG) == false)
+												if (drm.Id == JuegoDRM.Steam)
 												{
-													<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://www.gog.com/game/" + juego.SlugGOG, "gog")" target="_blank" style="width: 200px; text-align: center;">
-														@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "GOG")
-													</a>
+													if (juego.IdSteam > 0)
+													{
+														añadirDiv = true;
+													}
 												}
-											}
 
-											@if (drm.Id == JuegoDRM.Epic)
-											{
-												if (string.IsNullOrEmpty(juego.SlugEpic) == false)
+												if (drm.Id == JuegoDRM.GOG)
 												{
-													<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://store.epicgames.com/p/" + juego.SlugEpic, "epicgamesstore")" target="_blank" style="width: 200px; text-align: center;">
-														@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "Epic Games")
-													</a>
+													if (string.IsNullOrEmpty(juego.SlugGOG) == false)
+													{
+														añadirDiv = true;
+													}
+												}
+
+												if (drm.Id == JuegoDRM.Epic)
+												{
+													if (string.IsNullOrEmpty(juego.SlugEpic) == false)
+													{
+														añadirDiv = true;
+													}
+												}
+
+												if (drm.Id == JuegoDRM.Steam && juego.Deck != JuegoDeck.Desconocido)
+												{
+													añadirDiv = true;
+												}
+
+												if (drmsGeforceNOW.Count > 0)
+												{
+													foreach (var drmG in drmsGeforceNOW)
+													{
+														if (drmG == drm.Id)
+														{
+															añadirDiv = true;
+														}
+													}
+												}
+
+												if (añadirDiv == true)
+												{
+													<div style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+														@if (drm.Id == JuegoDRM.Steam)
+														{
+															if (juego.IdSteam > 0)
+															{
+																<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://store.steampowered.com/app/" + juego.IdSteam.ToString(), "steam")" target="_blank" style="text-align: center; padding: 5px 10px; height: 34px;" title="@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "Steam")">
+																	<img src="@Juegos.JuegoDRM2.SacarImagen(Juegos.JuegoDRM.Steam)" style="max-width: 20px; max-height: 20px;"/>
+																</a>
+															}
+														}
+
+														@if (drm.Id == JuegoDRM.GOG)
+														{
+															if (string.IsNullOrEmpty(juego.SlugGOG) == false)
+															{
+																<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://www.gog.com/game/" + juego.SlugGOG, "gog")" target="_blank" style="text-align: center; padding: 5px 10px; height: 34px;" title="@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "GOG")">
+																	<img src="@Juegos.JuegoDRM2.SacarImagen(Juegos.JuegoDRM.GOG)" style="max-width: 20px; max-height: 20px;"/>
+																</a>
+															}
+														}
+
+														@if (drm.Id == JuegoDRM.Epic)
+														{
+															if (string.IsNullOrEmpty(juego.SlugEpic) == false)
+															{
+																<a class="juego-boton-pequeño" href="@EnlaceAcortador.Generar("https://store.epicgames.com/p/" + juego.SlugEpic, "epicgamesstore")" target="_blank" style="text-align: center; padding: 5px 10px; height: 34px;" title="@string.Format("{0} {1}", Herramientas.Idiomas.CogerCadena(idioma, "String1", "Game"), "Epic Games")">
+																	<img src="@Juegos.JuegoDRM2.SacarImagen(Juegos.JuegoDRM.Epic)" style="max-width: 20px; max-height: 20px;" />
+																</a>
+															}
+														}
+
+														@if (drm.Id == JuegoDRM.Steam && juego.Deck != JuegoDeck.Desconocido)
+														{
+															<button @onclick="(e => DeckEnseñar(e))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px;">
+																<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; width: 75px; height: 32px;">
+																	<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.84" fill-rule="evenodd" clip-rule="evenodd" d="M7.77715 4.30197C10.9241 4.30197 13.4752 6.85305 13.4752 9.99997C13.4752 13.1469 10.9241 15.698 7.77715 15.698V18.8889C12.6864 18.8889 16.666 14.9092 16.666 9.99997C16.666 5.09078 12.6864 1.11108 7.77715 1.11108V4.30197ZM7.77756 13.8889C9.92533 13.8889 11.6664 12.1477 11.6664 9.99997C11.6664 7.8522 9.92533 6.11108 7.77756 6.11108C5.62979 6.11108 3.88867 7.8522 3.88867 9.99997C3.88867 12.1477 5.62979 13.8889 7.77756 13.8889Z" fill="var(--colorTexto)"></path></svg>
+
+																	@if (juego.Deck == JuegoDeck.Verificado)
+																	{
+																		<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
+																	}
+
+																	@if (juego.Deck == JuegoDeck.Jugable)
+																	{
+																		<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.61079 9.44444V15H11.3886V9.44444H8.61079ZM9.07372 8.05245C9.34781 8.23558 9.67004 8.33333 9.99967 8.33333C10.4417 8.33333 10.8656 8.15774 11.1782 7.84518C11.4907 7.53262 11.6663 7.10869 11.6663 6.66667C11.6663 6.33703 11.5686 6.0148 11.3855 5.74072C11.2023 5.46663 10.942 5.25301 10.6375 5.12687C10.3329 5.00072 9.99783 4.96771 9.67452 5.03202C9.35122 5.09633 9.05425 5.25507 8.82116 5.48815C8.58808 5.72124 8.42934 6.01821 8.36503 6.34152C8.30072 6.66482 8.33373 6.99993 8.45988 7.30447C8.58602 7.60902 8.79964 7.86931 9.07372 8.05245Z" fill="var(--deckJugable)"></path></svg>
+																	}
+
+																	@if (juego.Deck == JuegoDeck.NoSoportado)
+																	{
+																		<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.193 15.606a7 7 0 0 1-9.799-9.799l9.8 9.8Zm1.414-1.414a7 7 0 0 0-9.799-9.799l9.8 9.8ZM19.001 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" fill="var(--colorTexto)"></path></svg>
+																	}
+																</div>
+															</button>
+														}
+
+														@if (drmsGeforceNOW.Count > 0)
+														{
+															foreach (var drmG in drmsGeforceNOW)
+															{
+																if (drmG == drm.Id)
+																{
+																	<div style="display: flex; align-items: center; justify-content: center; gap: 10px; padding: 5px;" title="@Herramientas.Idiomas.CogerCadena(idioma, "String71", "Game")">
+																		<img src="@APIs.GeforceNOW.Streaming.Generar().ImagenIcono" style="max-width: 22px; max-height: 22px;" />
+
+																		<div style="width: 22px; height: 22px;">
+																			<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
+																		</div>
+																	</div>
+																}
+															}
+														}
+													</div>
 												}
 											}
 										</div>
@@ -571,7 +637,7 @@
 									List<JuegoPrecio> preciosBajos = new List<JuegoPrecio>();
 									int descuentoMaximo = 0;
 
-									<div style="display: flex; flex-direction: column; gap: 10px; padding: 20px;">
+									<div style="display: flex; flex-direction: column; gap: 15px; padding: 20px;">
 										@foreach (JuegoPrecio precio in OrdenarPrecios(juego.PrecioActualesTiendas, drm.Id))
 										{
 											if (precio.Descuento > descuentoMaximo)
@@ -582,11 +648,9 @@
 											if (precio.Descuento > descuentoMaximo - (descuentoMaximo / 2))
 											{
 												<a class="juego-boton-pequeño" style="display: block;" href="@EnlaceAcortador.Generar(precio.Enlace, precio.Tienda)" target="_blank">
-													<div class="perfil-flexible-centrado">
-														<div>
-															<img src="@SacarImagenTienda(precio.Tienda)" class="juego-imagen-boton" alt="Store" />
-															<span style="margin-left: 20px;">@ComprobarEdicion(juego.Nombre, precio.Nombre)</span>
-														</div>
+													<div style="display: flex; align-items: center; flex-wrap: wrap; gap: 20px;">
+														<img src="@SacarImagenTienda(precio.Tienda)" class="juego-imagen-boton" alt="@precio.Tienda" />
+														<span style="flex: 1;">@ComprobarEdicion(juego.Nombre, precio.Nombre)</span>
 
 														<div class="juego-descuento-precio">
 															<div style="font-size: 14px; margin: 20px;">
@@ -649,11 +713,9 @@
 												foreach (var precioBajo in preciosBajos)
 												{
 													<a class="juego-boton-pequeño" style="display: block;" href="@EnlaceAcortador.Generar(precioBajo.Enlace, precioBajo.Tienda)" target="_blank">
-														<div class="perfil-flexible-centrado">
-															<div>
-																<img src="@SacarImagenTienda(precioBajo.Tienda)" class="juego-imagen-boton" alt="Store" />
-																<span style="margin-left: 20px;">@ComprobarEdicion(juego.Nombre, precioBajo.Nombre)</span>
-															</div>
+														<div style="display: flex; align-items: center; flex-wrap: wrap; gap: 20px;">
+															<img src="@SacarImagenTienda(precioBajo.Tienda)" class="juego-imagen-boton" alt="@precioBajo.Tienda" />
+															<span style="flex: 1;">@ComprobarEdicion(juego.Nombre, precioBajo.Nombre)</span>
 
 															<div class="juego-descuento-precio">
 																<div style="font-size: 14px; margin: 20px;">
@@ -1264,15 +1326,15 @@
 			}
 		</div>
 
-		@if (DLCs.Count > 0)
+		@if (dlcs.Count > 0)
 		{
 			<div id="dlcs" style="margin-top: 50px; padding: 40px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño);">
 				<div>
-					<label style="font-size: 18px;">@Idiomas.CogerCadena(idioma, "String34", "Game") (@DLCs.Count.ToString())</label>
+					<label style="font-size: 18px;">@Idiomas.CogerCadena(idioma, "String34", "Game") (@dlcs.Count.ToString())</label>
 				</div>
 
 				<div style="display: flex; flex-direction: column; gap: 20px;">
-					<Virtualize Context="dlc" Items="DLCs" ItemSize="107">
+					<Virtualize Context="dlc" Items="dlcs" ItemSize="107">
 						<ItemContent>
 							<a href="/game/@dlc.Id/@Herramientas.EnlaceAdaptador.Nombre(dlc.Nombre)/" target="_blank" style="font-size: 16px; cursor: pointer; color: var(--colorTexto); text-decoration: none; padding: 0px;">
 								<div class="boton-expandir" style="display: flex; align-items: center; gap: 20px;">
@@ -1600,7 +1662,8 @@
 	[Parameter]
 	public string userAgent { get; set; }
 
-	private List<Juegos.Juego> DLCs = new List<Juegos.Juego>();
+	private List<Juegos.Juego> dlcs = new List<Juegos.Juego>();
+	private List<Juegos.JuegoDRM> drmsGeforceNOW = new List<JuegoDRM>();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -1629,7 +1692,12 @@
 				}
 			}	
 
-			DLCs = global::BaseDatos.Juegos.Buscar.DLCs(juego.Id.ToString());
+			dlcs = global::BaseDatos.Juegos.Buscar.DLCs(juego.Id.ToString());
+
+			if (juego.Tipo == JuegoTipo.Game)
+			{
+				drmsGeforceNOW = global::BaseDatos.Streaming.Buscar.GeforceNOWDRMs(juego.Id);
+			}
 
 			if (juego.IdSteam > 0)
 			{
