--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -10,7 +10,7 @@
             {
                 string fondo = string.Empty;
 
-                if (string.IsNullOrEmpty(idTiendaPendiente) == true && string.IsNullOrEmpty(idStreamingPendiente) == true)
+                if (string.IsNullOrEmpty(idTiendaPendiente) == true && string.IsNullOrEmpty(idSuscripcionPendiente) == true && string.IsNullOrEmpty(idStreamingPendiente) == true)
                 {
                     idTiendaPendiente = pendiente.Tienda.Id;
 
@@ -30,13 +30,39 @@
             }
         }
 
+        @foreach (var pendiente in pendientesSuscripcion)
+        {
+            if (pendiente.Pendientes.Count > 0)
+            {
+                string fondo = string.Empty;
+
+                if (string.IsNullOrEmpty(idTiendaPendiente) == true && string.IsNullOrEmpty(idSuscripcionPendiente) == true && string.IsNullOrEmpty(idStreamingPendiente) == true)
+                {
+                    idSuscripcionPendiente = pendiente.Suscripcion.Id.ToString();
+
+                    ClickearSuscripcionPendientes(idSuscripcionPendiente);
+                }
+                else
+                {
+                    if (idSuscripcionPendiente != pendiente.Suscripcion.Id.ToString())
+                    {
+                        fondo = "background-color: transparent;";
+                    }
+                }
+
+                <button @onclick="@(e => ClickearSuscripcionPendientes(e, pendiente.Suscripcion.Id.ToString(), pendiente.Suscripcion.Nombre))" class="boton-pequeño" style="margin: 10px 0px; display: block; @fondo">
+                    <img src="@pendiente.Suscripcion.ImagenIcono" style="margin: 0px 8px; height: 16px; width: 16px;" /> @pendiente.Suscripcion.Nombre (@pendiente.Pendientes.Count)
+                </button>
+            }
+        }
+
         @foreach (var pendiente in pendientesStreaming)
         {
             if (pendiente.Pendientes.Count > 0)
             {
                 string fondo = string.Empty;
 
-                if (string.IsNullOrEmpty(idStreamingPendiente) == true && string.IsNullOrEmpty(idTiendaPendiente) == true)
+                if (string.IsNullOrEmpty(idTiendaPendiente) == true && string.IsNullOrEmpty(idSuscripcionPendiente) == true && string.IsNullOrEmpty(idStreamingPendiente) == true)
                 {
                     idStreamingPendiente = pendiente.Streaming.Id.ToString();
 
@@ -57,7 +83,7 @@
         }
     </div>
 
-    @if (string.IsNullOrEmpty(idTiendaPendiente) == false || string.IsNullOrEmpty(idStreamingPendiente) == false)
+    @if (string.IsNullOrEmpty(idTiendaPendiente) == false || string.IsNullOrEmpty(idSuscripcionPendiente) == false || string.IsNullOrEmpty(idStreamingPendiente) == false)
     {
         <div style="width: 100%;">
             <div style="display: flex; justify-content: space-between;">
@@ -295,9 +321,11 @@
     private SqlConnection conexion = new SqlConnection();
 
     private List<PendientesTienda> pendientesTiendas = new List<PendientesTienda>();
+    private List<PendientesSuscripcion> pendientesSuscripcion = new List<PendientesSuscripcion>();
     private List<PendientesStreaming> pendientesStreaming = new List<PendientesStreaming>();
 
     private string idTiendaPendiente = null;
+    private string idSuscripcionPendiente = null;
     private string idStreamingPendiente = null;
 
     private string imagenPendiente = null;
@@ -330,6 +358,25 @@
             }
         }
 
+        pendientesSuscripcion.Clear();
+
+        foreach (var suscripcion in Suscripciones2.SuscripcionesCargar.GenerarListado())
+        {
+            if (suscripcion.AdminPendientes == true)
+            {
+                PendientesSuscripcion pendienteSuscripcion = new PendientesSuscripcion();
+                pendienteSuscripcion.Suscripcion = suscripcion;
+                pendienteSuscripcion.Pendientes = BaseDatos.Pendientes.Buscar.Suscripcion(suscripcion.Id, conexion);
+
+                if (pendienteSuscripcion.Pendientes.Count > 0)
+                {
+                    pendientesSuscripcion.Add(pendienteSuscripcion);
+                }
+            }
+        }
+
+        pendientesStreaming.Clear();
+
         foreach (var streaming in Streaming2.StreamingCargar.GenerarListado())
         {
             PendientesStreaming pendienteStreaming = new PendientesStreaming();
@@ -346,6 +393,7 @@
     private void ClickearTiendaPendientes(MouseEventArgs e, string id, string nombre)
     {
         idTiendaPendiente = id;
+        idSuscripcionPendiente = null;
         idStreamingPendiente = null;
 
         ClickearTiendaPendientes(idTiendaPendiente);
@@ -366,9 +414,9 @@
 
                 if (juego != null)
                 {
-                    nombrePendiente = juego.nombre;
+                    nombrePendiente = juego.Nombre;
 
-                    string imagen = juego.imagen;
+                    string imagen = juego.Imagen;
 
                     if (imagen != null)
                     {
@@ -377,7 +425,50 @@
 
                     imagenPendiente = imagen;
 
-                    enlacePendiente = juego.enlace;
+                    enlacePendiente = juego.Enlace;
+
+                    idsPendiente = BaseDatos.Pendientes.Buscar.Nombre(nombrePendiente, conexion);
+                }
+            }
+        }
+    }
+
+    private void ClickearSuscripcionPendientes(MouseEventArgs e, string id, string nombre)
+    {
+        idTiendaPendiente = null;
+        idSuscripcionPendiente = id;
+        idStreamingPendiente = null;
+
+        ClickearSuscripcionPendientes(idSuscripcionPendiente);
+    }
+
+    private void ClickearSuscripcionPendientes(string id)
+    {
+        if (string.IsNullOrEmpty(id) == false)
+        {
+            if (conexion.State != System.Data.ConnectionState.Open)
+            {
+                conexion = Herramientas.BaseDatos.Conectar();
+            }
+
+            using (conexion)
+            {
+                BaseDatos.Pendientes.Pendiente juego = BaseDatos.Pendientes.Buscar.PrimerJuegoSuscripcion(id, conexion);
+
+                if (juego != null)
+                {
+                    nombrePendiente = juego.Nombre;
+
+                    string imagen = juego.Imagen;
+
+                    if (imagen != null)
+                    {
+                        imagen = imagen.Replace("&amp;", "&");
+                    }
+
+                    imagenPendiente = imagen;
+
+                    enlacePendiente = juego.Enlace;
 
                     idsPendiente = BaseDatos.Pendientes.Buscar.Nombre(nombrePendiente, conexion);
                 }
@@ -388,6 +479,7 @@
     private void ClickearStreamingPendientes(MouseEventArgs e, string id, string nombre)
     {
         idTiendaPendiente = null;
+        idSuscripcionPendiente = null;
         idStreamingPendiente = id;
 
         ClickearStreamingPendientes(idStreamingPendiente);
@@ -408,9 +500,9 @@
 
                 if (juego != null)
                 {
-                    nombrePendiente = juego.nombre;
+                    nombrePendiente = juego.Nombre;
 
-                    string imagen = juego.imagen;
+                    string imagen = juego.Imagen;
 
                     if (imagen != null)
                     {
@@ -419,7 +511,7 @@
 
                     imagenPendiente = imagen;
 
-                    enlacePendiente = juego.enlace;
+                    enlacePendiente = juego.Enlace;
 
                     idsPendiente = BaseDatos.Pendientes.Buscar.Nombre(nombrePendiente, conexion);
                 }
